--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "joi": "^17.8.3",
     "jsdom": "^21.1.0",
     "mongoose": "^6.10.0",
     "reflect-metadata": "^0.1.13",
