--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 MONGODB = mongodb://localhost:27017/nest-pokemon
 PORT = 3000
 DEFAULT_LIMIT = 10
+SWAGGER_UPDATE = false # Use it only if the environment is development and only set to true to update or create swagger files in the public/doc path.
